[gd_scene load_steps=3 format=3 uid="uid://c1qvk8v2tiol7"]

[ext_resource type="TileSet" uid="uid://dv3g3xi70raix" path="res://Themes/TileSet.res" id="1_7c4sr"]
[ext_resource type="Script" path="res://Scripts/World_One_Puzzle.gd" id="1_ft8t6"]

[node name="WorldOnePuzzle" type="Node2D"]
script = ExtResource("1_ft8t6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-110, -134)
anchor_mode = 0
zoom = Vector2(0.8, 0.8)

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_7c4sr")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(524297, 0, 0, 458761, 0, 0, 393225, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 0, 0, 131081, 0, 0, 65545, 0, 0, 9, 0, 0, -65527, 0, 0, -131063, 0, 0, 393224, 0, 0, 327688, 0, 0, 524296, 0, 0, 458760, 0, 0, 262152, 0, 0, 196616, 0, 0, 131080, 0, 0, 65544, 0, 0, 8, 0, 0, -65528, 0, 0, -131064, 0, 0, 524298, 0, 0, 458762, 0, 0, 393226, 0, 0, 327690, 0, 0, 262154, 0, 0, 196618, 0, 0, 131082, 0, 0, 65546, 0, 0, 10, 0, 0, -65526, 0, 0, -131062, 0, 0, 524299, 0, 0, 458763, 0, 0, 393227, 0, 0, 393228, 0, 0, 327692, 0, 0, 262156, 0, 0, 196620, 0, 0, 131084, 0, 0, 65548, 0, 0, 12, 0, 0, -65524, 0, 0, 327691, 0, 0, 262155, 0, 0, 196619, 0, 0, 131083, 0, 0, 65547, 0, 0, 11, 0, 0, -65525, 0, 0, -131061, 0, 0, -131060, 0, 0, 524300, 0, 0, 458764, 0, 0, 524301, 0, 0, 458765, 0, 0, 393229, 0, 0, 327693, 0, 0, 262157, 0, 0, 196621, 0, 0, 131085, 0, 0, 65549, 0, 0, 13, 0, 0, -65523, 0, 0, -131059, 0, 0, 524302, 0, 0, 458766, 0, 0, 393230, 0, 0, 327694, 0, 0, 262158, 0, 0, 196622, 0, 0, 131086, 0, 0, 65550, 0, 0, 14, 0, 0, -65522, 0, 0, -131058, 0, 0, 524303, 0, 0, 458767, 0, 0, 393231, 0, 0, 327695, 0, 0, 262159, 0, 0, -131057, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 524304, 0, 0, 458768, 0, 0, 393232, 0, 0, 327696, 0, 0, 262160, 0, 0, 196624, 0, 0, 131088, 0, 0, 65552, 0, 0, 16, 0, 0, -65520, 0, 0, -131056, 0, 0, 524305, 0, 0, 458769, 0, 0, 393233, 0, 0, 327697, 0, 0, 262161, 0, 0, 196625, 0, 0, -65519, 0, 0, -131055, 0, 0, 18, 0, 0, -65518, 0, 0, -131054, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -262134, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -262127, 0, 0, -262128, 0, 0, -327664, 0, 0, -327665, 0, 0, -327666, 0, 0, -327667, 0, 0, -262131, 0, 0, -262132, 0, 0, -262133, 0, 0, -262135, 0, 0, -262136, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -262130, 0, 0, -262129, 0, 0, -327663, 0, 0, -393197, 0, 0, -393199, 0, 0, -393200, 0, 0, -393201, 0, 0, -393202, 0, 0, -393203, 0, 0, -393204, 0, 0, -393205, 0, 0, -393206, 0, 0, -393207, 0, 0, -393208, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -458733, 0, 0, 524295, 0, 0, 458759, 0, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 196615, 0, 0, 131079, 0, 0, 65543, 0, 0, 7, 0, 0, -65529, 0, 0, -131065, 0, 0, -196601, 0, 0, -262137, 0, 0, -327673, 0, 0, -393209, 0, 0, -458745, 0, 0, 458772, 0, 0, 393236, 0, 0, 327700, 0, 0, 262164, 0, 0, 196628, 0, 0, 131092, 0, 0, 65556, 0, 0, 19, 0, 0, -65517, 0, 0, 524307, 0, 0, 458771, 0, 0, 393234, 0, 0, 327698, 0, 0, 262162, 0, 0, 196626, 0, 0, 131089, 0, 0, 65553, 0, 0, 17, 0, 0, 65554, 0, 0, 131090, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 524308, 0, 0, 196627, 0, 0, 131091, 0, 0, 65555, 0, 0, -131053, 0, 0, -196589, 0, 0, -196588, 0, 0, -262124, 0, 0, -327660, 0, 0, -327661, 0, 0, -131052, 0, 0, -65516, 0, 0, 20, 0, 0, -262125, 0, 0, -393196, 0, 0, -458732, 0, 0, -262126, 0, 0, -327662, 0, 0, -393198, 0, 0, -458734, 0, 0, -196590, 0, 0, 458770, 0, 0, 524306, 0, 0, 524309, 0, 0, 458773, 0, 0, 393237, 0, 0, 327701, 0, 0, 262165, 0, 0, 196629, 0, 0, 131093, 0, 0, 65557, 0, 0, 21, 0, 0, -65515, 0, 0, -131051, 0, 0, -196587, 0, 0, -262123, 0, 0, -327659, 0, 0, -393195, 0, 0, -458731, 0, 0, 524310, 0, 0, 458774, 0, 0, 393238, 0, 0, 327702, 0, 0, 262166, 0, 0, 262167, 0, 0, 196631, 0, 0, 131095, 0, 0, 65559, 0, 0, 23, 0, 0, -65513, 0, 0, -131049, 0, 0, -196585, 0, 0, -262121, 0, 0, -327657, 0, 0, -393194, 0, 0, -458730, 0, 0, -327658, 0, 0, -262122, 0, 0, -196586, 0, 0, -131050, 0, 0, -65514, 0, 0, 22, 0, 0, 65558, 0, 0, 131094, 0, 0, 196630, 0, 0, 524311, 0, 0, 458775, 0, 0, 393239, 0, 0, 327703, 0, 0, 327704, 0, 0, 262168, 0, 0, 196632, 0, 0, 131096, 0, 0, 65560, 0, 0, 24, 0, 0, -393193, 0, 0, -458729, 0, 0, 524312, 0, 0, 458776, 0, 0, 393240, 0, 0, 327705, 0, 0, 262169, 0, 0, 196633, 0, 0, 131097, 0, 0, 65561, 0, 0, -65512, 0, 0, -131048, 0, 0, -196584, 0, 0, -262120, 0, 0, -327656, 0, 0, -393192, 0, 0, -458728, 0, 0, -458727, 0, 0, -393191, 0, 0, -327655, 0, 0, -262119, 0, 0, -196583, 0, 0, -131047, 0, 0, -65511, 0, 0, 25, 0, 0, 458777, 0, 0, 393241, 0, 0, 524313, 0, 0, 524314, 0, 0, 458778, 0, 0, 393242, 0, 0, 327706, 0, 0, 262170, 0, 0, 196634, 0, 0, 131098, 0, 0, 65562, 0, 0, 26, 0, 0, -65510, 0, 0, -131046, 0, 0, -196582, 0, 0, -262118, 0, 0, -327654, 0, 0, -393190, 0, 0, -458726, 0, 0, 524315, 0, 0, 458779, 0, 0, 393243, 0, 0, 327707, 0, 0, 262171, 0, 0, 196635, 0, 0, 131099, 0, 0, 65563, 0, 0, 27, 0, 0, -65509, 0, 0, -131045, 0, 0, -196581, 0, 0, -262117, 0, 0, -327653, 0, 0, -393189, 0, 0, -458725, 0, 0, -458724, 0, 0, -393188, 0, 0, -327652, 0, 0, -262116, 0, 0, -196580, 0, 0, -131044, 0, 0, -65508, 0, 0, 28, 0, 0, 65564, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 524316, 0, 0, 131100, 0, 0, 524317, 0, 0, 458781, 0, 0, 393245, 0, 0, 327709, 0, 0, 262173, 0, 0, 196637, 0, 0, 131101, 0, 0, 65565, 0, 0, 29, 0, 0, -65507, 0, 0, -131043, 0, 0, -196579, 0, 0, -262115, 0, 0, -327651, 0, 0, -393187, 0, 0, -458723, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 0, -524271, 0, 0, -524270, 0, 0, -524269, 0, 0, -524268, 0, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524264, 0, 0, -524263, 0, 0, -524262, 0, 0, -524261, 0, 0, -524260, 0, 0, -524259, 0, 0, 589853, 0, 0, 589852, 0, 0, 589851, 0, 0, 589849, 0, 0, 589850, 0, 0, 589848, 0, 0, 589847, 0, 0, 589846, 0, 0, 589845, 0, 0, 589844, 0, 0, 589843, 0, 0, 589842, 0, 0, 589841, 0, 0, 589840, 0, 0, 589839, 0, 0, 589838, 0, 0, 589837, 0, 0, 589836, 0, 0, 589835, 0, 0, 589834, 0, 0, 589833, 0, 0, 589832, 0, 0, 589831, 0, 0)
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-589808, 131072, 0, -589809, 131072, 0, 524304, 131072, 0, 524305, 131072, 0, 524306, 65536, 0, 524303, 65536, 0, -327652, 131072, 0, -393188, 131072, 0, -262116, 65536, 0, -458724, 65536, 0, -589807, 65536, 0, -589810, 65536, 0)
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(-393189, 131072, 0, -458725, 131072, 0, -655346, 131072, 0, -655345, 131072, 0, 458767, 131072, 0, 458768, 131072, 0, -655347, 65536, 0, -655344, 65536, 0, -524261, 65536, 0, -327653, 65536, 0, 458766, 65536, 0, 458769, 65536, 0)
layer_3/y_sort_enabled = true
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array(393230, 131072, 0, 393231, 131072, 0, -524262, 131072, 0, -458726, 131072, 0, -720883, 131072, 0, -720882, 131072, 0, 393229, 65536, 0, 393232, 65536, 0, -589798, 65536, 0, -393190, 65536, 0, -720881, 65536, 0, -720884, 65536, 0)
layer_4/y_sort_enabled = true
layer_4/z_index = 4
layer_4/tile_data = PackedInt32Array(-786421, 65536, 0, -786420, 65536, 0, -786419, 65536, 0, -786418, 65536, 0, -655335, 65536, 0, -589799, 65536, 0, -524263, 65536, 0, -458727, 65536, 0, 327692, 65536, 0, 327693, 65536, 0, 327694, 65536, 0, 327695, 65536, 0)

[node name="Button1" type="Button" parent="."]
offset_left = 501.0
offset_top = 266.0
offset_right = 532.0
offset_bottom = 296.0

[node name="Button2" type="Button" parent="."]
offset_left = 564.0
offset_top = 266.0
offset_right = 595.0
offset_bottom = 296.0

[node name="Button3" type="Button" parent="."]
offset_left = 624.0
offset_top = 266.0
offset_right = 655.0
offset_bottom = 296.0

[node name="Button4" type="Button" parent="."]
offset_left = 624.0
offset_top = 317.0
offset_right = 655.0
offset_bottom = 347.0

[node name="Button5" type="Button" parent="."]
offset_left = 564.0
offset_top = 317.0
offset_right = 595.0
offset_bottom = 347.0

[node name="Button6" type="Button" parent="."]
offset_left = 501.0
offset_top = 317.0
offset_right = 532.0
offset_bottom = 347.0

[node name="Button7" type="Button" parent="."]
offset_left = 1227.0
offset_top = 629.0
offset_right = 1316.0
offset_bottom = 670.0
text = "Reset"

[node name="Portal1" type="RichTextLabel" parent="."]
offset_left = 114.0
offset_top = 454.0
offset_right = 236.0
offset_bottom = 494.0
text = "Closed"

[node name="Portal2" type="RichTextLabel" parent="."]
offset_left = 1125.0
offset_top = 196.0
offset_right = 1227.0
offset_bottom = 236.0
text = "Closed"

[node name="Portal3" type="RichTextLabel" parent="."]
offset_left = 763.0
offset_top = -63.0
offset_right = 871.0
offset_bottom = -23.0
text = "Closed"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
